--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="navbar__logo">
             <img src="./img/worldwide 1 (Traced).svg" class="navbar__logo__imagem" alt="Logo da OptimusTech">
-            <h1 class="navbar__logo__titulo">OptimusTech</h1>
+            <a href="#" class="navbar__logo__titulo">OptimusTech</a>
         </div>
 
         <div class="navbar__container">
@@ -33,5 +33,28 @@
         <h1 class="cabecalho__titulo">Por que somos diferentes?</h1>
         <p class="cabecalho__texto">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
     </header>
+
+    <section class="metricas">
+        <div class="metricas__content">
+            <h3 class="metricas__content__numero">400+</h3>
+            <h2 class="metricas__content__titulo">Projetos concluídos</h2>
+            <p class="metricas__content__texto">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+        </div>
+        <div class="metricas__content">
+            <h3 class="metricas__content__numero">100+</h3>
+            <h2 class="metricas__content__titulo">Colaboradores</h2>
+            <p class="metricas__content__texto">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+        </div>
+        <div class="metricas__content">
+            <h3 class="metricas__content__numero">20k</h3>
+            <h2 class="metricas__content__titulo">Downloads</h2>
+            <p class="metricas__content__texto">Nossos projetos ques estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+        </div>
+        <div class="metricas__content">
+            <h3 class="metricas__content__numero">500+</h3>
+            <h2 class="metricas__content__titulo">Reiews 5 estrelas</h2>
+            <p class="metricas__content__texto">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+        </div>
+    </section>
 </body>
 </html>
