#7DaysOfCode (HTML e CSS) - 4º e 5º dia
4º dia: seção vaga e implementação da foto do grupo dev.
5º dia: adicionado a lista de vagas na seção de vagas.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
         </div>
     </nav>
 
-    <header class="cabecalho">
-        <h2 class="cabecalho__subtitulo">Sobre nós</h2>
-        <h1 class="cabecalho__titulo">Por que somos diferentes?</h1>
-        <p class="cabecalho__texto">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+    <header class="cabecalho secao-um">
+        <div class="texto__container">
+            <h2 class="cabecalho__titulo">Sobre nós</h2>
+            <h1 class="cabecalho__subtitulo">Por que somos diferentes?</h1>
+            <p class="secao__texto">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+        </div>
     </header>
 
     <section class="metricas">
@@ -52,9 +54,67 @@
         </div>
         <div class="metricas__content">
             <h3 class="metricas__content__numero">500+</h3>
-            <h2 class="metricas__content__titulo">Reiews 5 estrelas</h2>
+            <h2 class="metricas__content__titulo">Reviews 5 estrelas</h2>
             <p class="metricas__content__texto">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
         </div>
+    </section>
+
+    <section class="secao-um">
+        <div class="texto__container">
+            <h2 class="titulo-vagas secao__titulo">Vagas abertas!</h2>
+            <h3 class="secao__subtitulo">Estamos procurando</h3>
+            <p class="secao__texto">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+        </div>
+        <img src="./img/Image.png" class="secao__imagem" alt="imagem de uma equipe de programadores">
+        
+        <div class="vagas">
+            <h2 class="vagas__titulo">Design</h2>
+            <ul class="vagas__lista lista-design">
+                <li class="vagas__lista__item">
+                    <h3 class="vagas__lista__subtitulo">Product Designer</h3>
+                    <span class="vagas__lista__texto-container">
+                        <p class="vagas__lista__texto">Full-time</p>
+                        <p class="vagas__lista__texto">Faixa salarial: R$7.000</p>
+                    </span>
+                </li>
+
+                <li class="vagas__lista__item">
+                    <h3 class="vagas__lista__subtitulo">UX Designer</h3>
+                    <span class="vagas__lista__texto-container">
+                        <p class="vagas__lista__texto">Full-time</p>
+                        <p class="vagas__lista__texto">Faixa salarial: R$6.000</p>
+                    </span>
+                </li>
+            </ul>
+
+            <h2 class="vagas__titulo">Desenvolvimento de Software</h2>
+            <ul class="vagas__lista">
+                <li class="vagas__lista__item">
+                    <h3 class="vagas__lista__subtitulo">Desenvolvedor(a) iOS</h3>
+                    <span class="vagas__lista__texto-container">
+                        <p class="vagas__lista__texto">Full-time</p>
+                        <p class="vagas__lista__texto">Faixa salarial: R$8.000</p>
+                    </span>
+                </li>
+
+                <li class="vagas__lista__item">
+                    <h3 class="vagas__lista__subtitulo">Desenvolvedor(a) Front-end</h3>
+                    <span class="vagas__lista__texto-container">
+                        <p class="vagas__lista__texto">Full-time</p>
+                        <p class="vagas__lista__texto">Faixa salarial: R$7.000</p>
+                    </span>
+                </li>
+
+                <li class="vagas__lista__item">
+                    <h3 class="vagas__lista__subtitulo">Desenvolvedor(a) Back-end</h3>
+                    <span class="vagas__lista__texto-container">
+                        <p class="vagas__lista__texto">Full-time</p>
+                        <p class="vagas__lista__texto">Faixa salarial: R$8.000</p>
+                    </span>
+                </li>
+            </ul>
+        </div>
+
     </section>
 </body>
 </html>
