--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <section class="metricas">
+    <section class="metricas secao-dois">
         <div class="metricas__content">
             <h3 class="metricas__content__numero">400+</h3>
             <h2 class="metricas__content__titulo">Projetos concluídos</h2>
@@ -114,7 +114,21 @@
                 </li>
             </ul>
         </div>
-
     </section>
+
+    <section class="depoimentos secao-dois">
+        <div class="depoimentos-container">
+            <div class="depoimentos__titulo-container">
+                <h2 class="depoimentos__container__titulo">Veja o que nossos colaboradores falam sobre nós</h2>
+                <h3 class="depoimentos__container__subtitulo">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h3>
+            </div>
+            <div class="depoimentos__perfil">
+                <img src="./img/Avatar.png" alt="imagem de perfil da Desenvolvedora Web Júlia Castro">
+                <h4 class="depoimentos__perfil__nome">Júlia Castro</h4>
+                <p class="depoimentos__perfil__cargo">Desenvolvedora Web</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
