#7DaysOfCode (HTML e CSS) - 7º dia
Adicionado o rodape e o formulário da pagina.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     </section>
 
-    <section class="secao-um">
+    <section class="secao-um secao-vagas">
         <div class="texto__container">
             <h2 class="titulo-vagas secao__titulo">Vagas abertas!</h2>
             <h3 class="secao__subtitulo">Estamos procurando</h3>
@@ -129,6 +129,18 @@
             </div>
         </div>
     </section>
-
+    <footer class="rodape">
+        <div class="texto__container">
+            <h2 class="secao__subtitulo">Acompanhe as nossas oportunidades</h2>
+            <p class="secao__texto">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+            <div class="formulario-container">
+                <input type="email" id="input-email" class="formulario__email" placeholder="Seu e-mail">
+                <label for="input-email">
+                    <input type="submit" value="Cadastrar" class="formulario__botao">
+                </label>
+            </div>
+        </div>
+        <p class="texto-copy">&copy; 2022 OptimusTech Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
